--- a/hons/docs/tAbstract.tex
+++ b/hons/docs/tAbstract.tex
@@ -5,7 +5,7 @@ Programs in this domain can be easily decomposed into large-grained parallel exe
 However, when operating in a high-performance environment, robustness to failures becomes important.
 As such, we focus our attention on developing robust and extensible frameworks to allow streaming computations to run on heterogeneous networked (cloud) systems.
 
-This thesis investigates the provisioun of fault-tolerance to a stream programming framework running on the cloud.
+This thesis investigates the provision of fault-tolerance to a stream programming framework running on the cloud.
 We develop the SDFSimulator, which represents arbitrary cloud machines and simulates fault tolerance and recovery mechanisms which occur dynamically during the execution of stream programs.
 We analyse the problem of assigning computational units (actors) to the processors on such a system whilst respecting certain constraints imposed by the fault tolerance mechanism.
 We prove this problem to be NP-Hard, and we provide a heuristic solver, with solutions on average only 10\% worse than the optimal solutions under realistic and totally random tests.
