--- a/hons/docs/tHardness.tex
+++ b/hons/docs/tHardness.tex
@@ -19,27 +19,22 @@ Graph $G$
 	\nonumber E \subseteq & V^2 & (edges)
 \end{align}
 
-We shall deal exclusively with so-called ``undirected'' graphs, in which for all $(u,v) \in E : (u,v) = (v,u)$.
+\noindent We shall deal exclusively with so-called {\em undirected} graphs, in which for all $(u,v) \in E : (u,v) = (v,u)$.
+Note that if $V' \subseteq V$ or $E' \subseteq E$ then we may call the graph $G'=(V',E')$ a \emph{subgraph} of $G=(V,E)$.
 
-Note: if $V' \subseteq V$ or $E' \subseteq E$ then we may call the graph $G'=(V',E')$ a \emph{subgraph} of $G=(V,E)$.
 \end{definition}
 
 \begin{definition}
 \label{defHardPath}
 Path Predicate.
 
-The predicate $\path{E'}{u}{v}$ is true for all $E' \subseteq E$ and $u, v \in V$ in the graph $G=(V,E)$ in the following cases:
-
-\begin{align}
-	\nonumber \forall (u,v) \in V^2 : \path{E}{u}{v} \Leftrightarrow & ( u = v \\
-	\nonumber & \vee \langle \exists w \in V : \path{E}{u}{w} \wedge (w, v) \in E \rangle).
-\end{align}
+The predicate $\path{E'}{u}{v}$ is true for all $E' \subseteq E$ and $u, v \in V$ in the graph $G=(V,E)$ in the cases where $u = v$, or  $\exists w \in V : \path{E}{u}{w} \wedge (w, v) \in E$.
 
 Note also then that:
 
 \begin{align}
-	\nonumber \forall u, v \in V: & \path{E}{u}{v} \Leftrightarrow \path{E}{v}{u} \\
-	\nonumber \forall u, v, w \in V: & \path{E}{u}{w} \wedge \path{E}{w}{v} \Rightarrow \path{E}{u}{v}.
+	\nonumber \langle \forall u, v \in V: & \path{E}{u}{v} \Leftrightarrow \path{E}{v}{u} \rangle. \\
+	\nonumber \langle \forall u, v, w \in V: & \path{E}{u}{w} \wedge \path{E}{w}{v} \Rightarrow \path{E}{u}{v} \rangle.
 \end{align}
 
 For simplicity we shall use $\npath{E}{u}{v}$ when the predicate does not hold.
@@ -53,7 +48,7 @@ Next we formalise the problems that we are dealing with.
 \begin{definition}
 {\em Multi-Terminal Cut}
 
-Given a graph $G=(V,E,w,T)$, a set $T=\{t_1, t_2, ..., t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$, and a positive weight $w(e)$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
+Given a graph $G=(V,E,w,T)$, with two more components added: a set $T=\{t_1, t_2, ..., t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$, and a positive weight $w(e)$ for each edge $e \in E$, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
 An instance of MTC is therefore defined formally:
 
 \begin{align}
@@ -67,31 +62,33 @@ Solution: $\mSolution \in 2^E$
 
 Solution Cost: $\mCost : 2^E \rightarrow \mathbb{Z}^+$
 \begin{align}
-	\nonumber \mCost(S) = \displaystyle\sum\limits_{(u,v) \in S} w(u,v)
+	\nonumber \mCost(S) = \displaystyle\sum\limits_{(u,v) \in S} w((u,v))
 \end{align}
 
 Feasible Solution Space: $F \subseteq 2^E$
 \begin{align}
-	\nonumber \forall S \in F : \forall s, t \in T: s \neq t \Rightarrow \npath{E \setminus S}{s}{t}
+	\nonumber \langle \forall S \in F : \forall s, t \in T: s \neq t \Rightarrow \npath{E \setminus S}{s}{t} \rangle .
 \end{align}
 
 Optimal Solution Space: $O \subseteq F$
 \begin{align}
-	\forall S_o \in O : \forall S_f \in F : \nonumber C(S_o) \leq C(S_f)
+	\nonumber \langle \forall S_o \in O : \forall S_f \in F : C(S_o) \leq C(S_f) \rangle .
 \end{align}
 
 \end{definition}
 
 \begin{definition}
 The {\em residual graph} ($G_r$) is a subgraph of MTC graph $G=(V,E,w,T)$ with some subset of edges $S \subseteq E$ removed:
-
-$G_r = (V, E \setminus S, w, T)$
+\begin{align}
+	\nonumber G_r = (V, E \setminus S, w, T).
+\end{align}
 \end{definition}
 
 \begin{definition}
+\label{defHardRAAP}
 {\em Robust Actor Allocation}
 
-Given a graph $G=(V,E,w_c,w_i, P, A)$, a partitioning of $V$ into $k$ subsets and a set of processors $P$, where $w_c : E \rightarrow \mathbb{Z}^+$ and $w_i : V \times P \rightarrow \mathbb{Z}^+$, find a mapping $\rSolution : V \rightarrow P$ such that
+Given a graph $G=(V,E,w_c,w_i, P, A)$, where A is a complete set of disjoint subsets of V (now called {\em actors}, $P$ is a set of processors, $w_c : E \rightarrow \mathbb{Z}^+$ and $w_i : V \times P \rightarrow \mathbb{Z}^+$, find a mapping $\rSolution : V \rightarrow P$ such that
 the cost function $\rCost(\rSolution)$ (detailed below) is minimised and no actors in the same partition are assigned to the same processor.
 
 \begin{align}
@@ -107,14 +104,14 @@ Solution: $\rSolution \in V \rightarrow P$
 
 Solution Cost: $\rCost : V \rightarrow P \rightarrow \mathbb{Z}^+$
 \begin{align}
-	\nonumber \rCost(\rSolution) = \displaystyle\sum\limits_{(u,v) \in E : \rSolution(u) \neq \rSolution(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \rSolution(v))
+	\nonumber \rCost(\rSolution) = \displaystyle\sum\limits_{(u,v) \in E : \rSolution(u) \neq \rSolution(v)} w_c((u,v)) + \displaystyle\sum\limits_{v \in V} w_i(v, \rSolution(v))
 \end{align}
 
 Feasible Solution Space: $\rFeasible \subseteq V \rightarrow P$
 \begin{align}
 	\nonumber \forall \rSolution \in \rFeasible & \\
-	\nonumber \mbox{(1)} \quad & \rCost(\rSolution) \neq \infty \quad \mbox{We use $\infty$ as a placeholder for a very large integer} \\
-	\nonumber \mbox{(2)} \quad & \forall A_i \in A : \forall u , v \in A_i : u \neq v \Rightarrow \rSolution(u) \neq  \rSolution(v)
+	\nonumber \mbox{(1)} \quad & \rCost(\rSolution) < \infty . \quad \mbox{We use $\infty$ as a placeholder for a very large integer} \\
+	\nonumber \mbox{(2)} \quad & \forall A_i \in A : \forall u , v \in A_i : u \neq v \Rightarrow \rSolution(u) \neq  \rSolution(v) .
 \end{align}
 
 \noindent The feasibility constraint (1) here is used as a means of excluding parts of the solution space known to be non-optimal from the feasible region too.
@@ -122,7 +119,7 @@ It is simply a shortcut but does not affect the results.
 
 Optimal Solution Space: $\rOptimal \subseteq \rFeasible$
 \begin{align}
-	\nonumber 	\forall \rSolution_o \in \rOptimal : \forall \rSolution_f \in \rFeasible : \rCost(\rSolution_o) \leq \rCost(\rSolution_f).
+	\nonumber \langle \forall \rSolution_o \in \rOptimal : \forall \rSolution_f \in \rFeasible : \rCost(\rSolution_o) \leq \rCost(\rSolution_f) \rangle .
 \end{align}
 
 \end{definition}
@@ -140,7 +137,7 @@ Mapping ($\mapsto$)
 \begin{align}
 	\nonumber I \in & MTC(V,E,w,T) &\\
 	\nonumber I' \in & RAAP(V', E', w_c, w_i, P, A) &\\
-	\nonumber & I \mapsto I' if and only if: &\\
+	\nonumber & I \mapsto I' \quad \mbox{if and only if:} &\\
 	\nonumber V' & = V\\
 	\nonumber E' & = E\\
 	\nonumber P & = T\\
@@ -153,7 +150,7 @@ Mapping ($\mapsto$)
 	\nonumber A & = \{\{v\} | v \in V\}
 \end{align}
 
-Note that $w_i(v, p)$ may take infinity where $v$ is a terminal that doesnt map to $p$.
+Note that $w_i(v, p)$ may take the value $\infty$ where $v$ is a terminal that does not map to $p$.
 This is simply a way of forcing all terminals to be mapped to themselves, as we shall see.
 
 We have used ``$=$'' to keep future descriptions simple, where we really mean that there is a function $f : V \rightarrow V'$ such that
@@ -161,17 +158,17 @@ We have used ``$=$'' to keep future descriptions simple, where we really mean th
 	\nonumber & V' = \{f(v) | v \in V\} , \\
 	\nonumber & E' = \{(f(u), f(v)) | (u,v) \in E\} , \\
 	\nonumber & P = \{f(t) | t \in T\} , \mbox{and} \\
-	\nonumber & \langle \forall (u, v) \in E : w_c(f(u), f(v)) = w(u, v) \rangle
+	\nonumber & \langle \forall (u, v) \in E : w_c((f(u), f(v))) = w((u, v)) \rangle
 \end{align}
 \end{definition}
 
-Note that the mapping \ref{defHardMap} constrains $A$ to be singletons of vertices, which makes it impossible to violate feasibility constraint (2).
+Note that the mapping in Definition \ref{defHardMap} constrains $A$ to be singletons of vertices, which makes it impossible to violate feasibility constraint (2).
 When talking about mapped instances we may therefore ignore this constraint.
 
 \section{Feasibility of the Mapping}
 \label{secHardFeas}
 
-Referring to Definition \ref{defHardMap} we must see if the mapping allows us to determine feasible solutions to the original MTC problem ($\mInstance$) when we find a feasible solution to the mapped RAAP instance ($\rInstance$).
+Referring to Definition \ref{defHardMap}, we must see if the mapping allows us to determine feasible solutions to the original MTC problem ($\mInstance$) when we find a feasible solution to the mapped RAAP instance ($\rInstance$).
 To do this we must have some mechanism to retrieve MTC solutions from the mapped RAAP solution.
 
 \begin{definition}
@@ -180,7 +177,7 @@ Given an assignment function $\rSolution$, $\reverse$ returns a list of edges $(
 
 \begin{align}
 	\nonumber \reverse & : V \rightarrow P \rightarrow 2^E \\
-	\nonumber \reverse(\rSolution) & = \{(u,v) \in E | \rSolution(u) \neq \rSolution(v)\}
+	\nonumber \reverse(\rSolution) & = \{(u,v) \in E | \rSolution(u) \neq \rSolution(v)\} .
 \end{align}
 \end{definition}
 
@@ -189,7 +186,7 @@ Given an assignment function $\rSolution$, $\reverse$ returns a list of edges $(
 The two nodes at the endpoint of any edge in the residual graph were assigned to the same processor:
 
 \begin{align}
-	\nonumber \forall(u, v) \in E \setminus \reverse(\rSolution) : \rSolution(u) = \rSolution(v).
+	\nonumber \langle \forall(u, v) \in E \setminus \reverse(\rSolution) : \rSolution(u) = \rSolution(v) \rangle .
 \end{align}
 \end{lemma}
 
@@ -202,19 +199,19 @@ Immediate by definition of $\reverse$.
 The two nodes for which the path predicate is true in the residual graph were assigned to the same processor:
 
 \begin{align}
-	\nonumber \forall (u, v) \in V^2 : \path{E \setminus \reverse(\rSolution)}{u}{v} \Rightarrow \rSolution(u) = \rSolution(v).
+	\nonumber \langle \forall (u, v) \in V^2 : \path{E \setminus \reverse(\rSolution)}{u}{v} \Rightarrow \rSolution(u) = \rSolution(v) \rangle .
 \end{align}
 \end{lemma}
 
 \begin{proof}
 We assume that $\path{E \setminus \reverse(\rSolution)}{u}{v}$ holds, now we establish that in such cases $\rSolution(u) = \rSolution(v)$ by induction.
 
-By definition \ref{defHardPath}, when $\path{E \setminus \reverse(\rSolution)}{u}{v}$ holds there can be two cases:
+By Definition \ref{defHardPath}, when $\path{E \setminus \reverse(\rSolution)}{u}{v}$ holds there can be two cases:
 
 \begin{align}
 	\nonumber \mbox{1)} \quad & u = v \quad \mbox{(base case)} \\
 	\nonumber & \quad \mbox{obviously $\rSolution(u) = \rSolution(v)$} \\
-	\nonumber \mbox{2)} \quad & \exists w \in V: \path{E \setminus \reverse(\rSolution)}{u}{w} \wedge (w, v) \in E \setminus \reverse(\rSolution)
+	\nonumber \mbox{2)} \quad & \langle \exists w \in V: \path{E \setminus \reverse(\rSolution)}{u}{w} \wedge (w, v) \in E \setminus \reverse(\rSolution) \rangle .
 \end{align}
 
 \noindent We may deduce that $\rSolution(u) = \rSolution(w)$ inductively.
@@ -226,13 +223,13 @@ Also, since $(w, v) \in E \setminus \reverse(\rSolution)$, from Lemma \ref{EDGEA
 Any feasible assignment $\rSolution$ maps all terminals to themselves:
 
 \begin{align}
-	\nonumber \forall \rSolution \in F' : \forall t \in T : \rSolution(t) = t.
+	\nonumber \langle \forall \rSolution \in F' : \forall t \in T : \rSolution(t) = t \rangle .
 \end{align}
 \end{lemma}
 
 \begin{proof}
-Immediate by the definition of the mapping.
-Otherwise $\rCost(\rSolution) = \infty$ and therefore $\rSolution \not\in \rFeasible$.
+Immediate by the definition of the mapping (in Definition \ref{defHardMap}).
+Otherwise $\rCost(\rSolution) \geq \infty$ and therefore $\rSolution \not\in \rFeasible$.
 \end{proof}
 
 \begin{lemma}
@@ -240,20 +237,21 @@ Otherwise $\rCost(\rSolution) = \infty$ and therefore $\rSolution \not\in \rFeas
 The reverse solution for any feasible $\rSolution$ is also a feasible solution for the MTC instance.
 
 \begin{align}
-	\nonumber \forall \rSolution \in \rFeasible : \reverse(\rSolution) \in \mFeasible
+	\nonumber \langle \forall \rSolution \in \rFeasible : \reverse(\rSolution) \in \mFeasible \rangle .
 \end{align}
 \end{lemma}
-\begin{proof}
-In other words, we must show that $\forall s, t \in T : s \neq t \Rightarrow \npath{E \setminus \reverse(\rSolution)}{s}{t}$.
 
-To prove this by contradiction let us presume $\exists \beta \in \rFeasible : \reverse(\beta) \not\in \mFeasible$.
-Therefore $\exists s, t \in T : s \neq t \wedge \path{E \setminus \reverse(\beta)}{s}{t}$.
+\begin{proof}
+In other words, we must show that $ \langle \forall s, t \in T : s \neq t \Rightarrow \npath{E \setminus \reverse(\rSolution)}{s}{t} \rangle$ .
+
+To prove this by contradiction let us presume $\langle \exists \beta \in \rFeasible : \reverse(\beta) \not\in \mFeasible \rangle$.
+Therefore $\langle \exists s, t \in T : s \neq t \wedge \path{E \setminus \reverse(\beta)}{s}{t} \rangle$.
 
 Now, let us assume $s, t \in T, s \neq t$ and $\path{E \setminus \reverse(\beta)}{s}{t}$.
-First from \ref{FORCEASSIGN}, it is the case that $\beta(s) = s$ and $\beta(t) = t$.
+First from Lemma \ref{FORCEASSIGN}, it is the case that $\beta(s) = s$ and $\beta(t) = t$.
 So since $s \neq t$ then $\beta(s) \neq \beta(t)$.
 
-Second from \ref{PATHASSIGN}:
+Second from Lemma \ref{PATHASSIGN}:
 \begin{align}
 	\nonumber \forall (u, v) \in V^2 : \path{E \setminus \reverse(\rSolution)}{u}{v} & \Rightarrow \rSolution(u) = \rSolution(v)
 \end{align}
@@ -263,15 +261,15 @@ And therefore since $\path{E \setminus \reverse(\beta)}{s}{t}$, $\beta(s) = \bet
 But this is a contradiction.
 \end{proof}
 
-\section{Optimality of the mapping}
+\section{Optimality of the Mapping}
 \label{secHardOpt}
 
 We need to show that the mapping allows us to solve the MTC problem optimally if we can solve the RAAP mapped instance optimally.
 To do this we must show that all optimal solutions of the RAAP instance $\rInstance$ can be reversed using $\reverse$ to optimal solutions of the MTC instance $\mInstance$.
 
-We intuit a surjection on the reversal function.
-If we were to name processors in the assignment, we can have a different assignment by switching the names of two processors that would yield the same reversed solution.
-This intuition brings us to look at a way of retreiving at least one $\rSolution$ to $\rInstance$ from a given $\mSolution$ for $\mInstance$ and working with that.
+When we look at the $\reverse$ function, we intuitively see that it may be surjective.
+This would allow us to derive solutions to to mapped instance $\rInstance$ by solving the normal instance $\mInstance$ optimally.
+We could then propose that every optimal solution to $\mInstance$ corresponds to at least one optimal solution to $\rInstance$.
 
 We do this using an {\em inversion function} $\inverse$, which has some useful properties.
 Most importantly, we can say something about the cost of inverted solutions which we use to prove the optimality proposition.
@@ -280,8 +278,8 @@ Most importantly, we can say something about the cost of inverted solutions whic
 Inversion Function $\inverse$
 
 First we pick arbitrarily $t_0 \in T$ as a default processor.
-We use it to be able to assign vertices $v \in V'$ for which $\forall t \in T : \npath{}{v}{t}$.
-Note however it is possible to assign a vertex to $t_0$ when it is not the case that this vertex is disconnected from all vertices.
+We use it to be able to assign vertices $v \in V'$ for which $\forall t \in T : \npath{E}{v}{t}$.
+Note, however, it is possible to assign a vertex to $t_0$ when it is not the case that this vertex is disconnected from all vertices.
 \begin{align}
 	\nonumber \inverse & : 2^E \rightarrow (V \rightarrow P) \\
 	\nonumber \inverse(S) & = \rSolution \mbox{ where for all } v \in V', \rSolution(v) = \mbox{$\left\{ 
@@ -297,29 +295,30 @@ Note however it is possible to assign a vertex to $t_0$ when it is not the case 
 Any edge in the inversion of a feasible solution to a multiterminal cut with endpoints assigned to different processors had to be in the solution.
 
 \begin{align}
-	\nonumber & \forall \mSolution \in \mFeasible : \forall (u, v) \in E' : \inverse(S)(u) \neq \inverse(S)(v) \Rightarrow (u,v) \in S \\
+	\nonumber & \langle \forall \mSolution \in \mFeasible : \forall (u, v) \in E' : \inverse(S)(u) \neq \inverse(S)(v) \Rightarrow (u,v) \in S \rangle ,\\
 	\nonumber \mbox{or} &\\
-	\nonumber & \forall S \in F : \{(u,v) |(u, v) \in E' \wedge \inverse(S)(u) \neq \inverse(S)(v)\} \subseteq S.
+	\nonumber & \langle \forall S \in F : \{(u,v) |(u, v) \in E' \wedge \inverse(S)(u) \neq \inverse(S)(v)\} \subseteq S \rangle .
 \end{align}
 \end{lemma}
 
 \begin{proof}
-To prove this by contradiction we must show that there is no edge with differently assigned endpoints that is not in the solution.
-Assume $\exists (u,v) \in E' : \inverse(S)(u) \neq \inverse(S)(v) \wedge (u,v) \not\in S$.
+To prove this by contradiction we must show that there is no edge with differently assigned endpoints which is not in the solution.
+aThat is, Assume $\langle \exists (u,v) \in E' : \inverse(S)(u) \neq \inverse(S)(v) \wedge (u,v) \not\in S \rangle$.
 
 For the above assumption we are concerned with two possible cases, either:
 \begin{enumerate}
-	\item neither $u$ nor $v$ has been assigned the default processor$t_0$
-	\item one of them has been assigned the default processor
+	\item neither $u$ nor $v$ has been assigned the default processor $t_0$, or
+	\item one of them has been assigned the default processor.
 \end{enumerate}
 
-\noindent It is possible that one of the nodes happened to be assigned the default processor because they are connected (rather than because it was disconnected from every terminal) but we can ignore this case as we only need to show the lemma for all differently assigned nodes.
+\noindent It is possible that one of the nodes happened to be assigned the default processor because they are connected (rather than because it was disconnected from every terminal) but we can ignore this case as we only need to prove the lemma for all differently-assigned nodes.
 
-1) When neither node was assigned the default processor we have the following, where $(u, v) \in E \setminus S$
+1) When neither node was assigned the default processor, we have the following, where $(u, v) \in E \setminus S$ :
 \begin{align}
-	\nonumber \exists s \neq t \in T  & : \path{E \setminus S}{u}{s} \wedge \path{E \setminus S}{v}{t} \\
-	\nonumber & \Rightarrow \path{E \setminus S}{u}{t} \wedge \path{E \setminus S}{v}{s} \quad \mbox{from the definition of the path predicate}\\
-	\nonumber & \Rightarrow S \not\in F \quad \mbox{from the definition of the MTC}
+	\nonumber \langle \exists s \neq t \in T  & : \path{E \setminus S}{u}{s} \wedge \path{E \setminus S}{v}{t} \rangle \\
+	\nonumber & \mbox{since $(u, v) \in E \setminus \mSolution$, we have that $\path{E \setminus S}{u}{s}$} \\
+	\nonumber & \mbox{and since $\path{E \setminus S}{u}{t}$, we get $\path{E \setminus S}{s}{t}$.} \\
+	\nonumber & \mbox{Therefore, $S \not\in F$ (by the definition of feasible solutions to the MTC).}
 \end{align}
 
 2) When one of the nodes was assigned the default processor we have the following:
@@ -344,7 +343,8 @@ Any feasible solution to a multiterminal cut is also a feasible solution to its 
 \end{lemma}
 
 \begin{proof}
-Since the mapping allows us to ignore the partitioning constraint $A$, from the definition of the RAAP, we are only concerned with the cost.
+To satisfy feasibility we must ensure the two constraints mentioned in Definition \ref{defHardRAAP}.
+The mapping (Definition \ref{defHardMap}) allows us to ignore constraint 2), so we need only prove that inverted costs are less than $\infty$.
 
 Immediately from the path predicate and definition of $\inverse$ we see that $\forall t \in T : \inverse(S)(t) = t$.
 This means the assignment portion of the costs must be 0, as per the definitions of the mapping and the RAAP.
@@ -355,7 +355,7 @@ This means the assignment portion of the costs must be 0, as per the definitions
 \noindent Given positive costs ($w_c$), we relax the constraints on this summation to yield.
 \begin{align}
 	\nonumber \rCost(\inverse(\mSolution)) & \leq \displaystyle\sum\limits_{(u,v) \in E'} w_c(u,v) \\
-	\nonumber \rCost(\inverse(\mSolution)) & < \infty \\
+	\nonumber \rCost(\inverse(\mSolution)) & < \infty \quad \mbox{Note that $\infty$ is a large number}\\
 	\nonumber \inverse(\mSolution) & \in F'
 \end{align}
 \end{proof}
@@ -389,14 +389,14 @@ From the definitions of the MTC and RAAP we have that:
 The solution to the RAAP instance of a mapped MTC problem costs the same as the reverse ($\reverse$) solution.
 
 \begin{align}
-	\nonumber \forall \rSolution \in F' : C'(\rSolution) = C(\reverse(\rSolution)).
+	\nonumber \langle \forall \rSolution \in F' : C'(\rSolution) = C(\reverse(\rSolution)) \rangle.
 \end{align}
 \end{lemma}
 
 \begin{proof}
 Immediately by the definitions of the mapping, $\reverse$ and Lemma \ref{FORCEASSIGN}.
 
-From \ref{FORCEASSIGN} we know $\forall t \in T : \rSolution(t) = t$ hence $\displaystyle\sum\limits_{v \in V'} w_i(v, \rSolution(v)) = 0$.
+From \ref{FORCEASSIGN} we know that $\langle \forall t \in T : \rSolution(t) = t \rangle$ hence $\displaystyle\sum\limits_{v \in V'} w_i(v, \rSolution(v)) = 0$.
 
 Then:
 \begin{align}
@@ -409,19 +409,19 @@ Then:
 \begin{lemma}
 \label{REVERSEOPTIMAL}
 Any optimal solution to RAAP can be reversed to give an optimal solution to MTC.
-
 \begin{align}
-	\nonumber \forall \rSolution \in O' : \reverse(\rSolution) \in O.
+	\nonumber \langle \forall \rSolution \in O' : \reverse(\rSolution) \in O \rangle .
 \end{align}
 \end{lemma}
 
 \begin{proof}
 This uses a contradiction that would arise otherwise because of lemmas \ref{INVERSEFEASIBLE}, \ref{REVERSECOST} and \ref{INVERSECOST}.
 \begin{align}
-	\nonumber \mbox{Assume:} \quad & \exists \rSolution \in O' : \reverse(\rSolution) \not\in O \\
-	\nonumber \Rightarrow & \exists S \in F : C(S) < C(\reverse(\rSolution)) \quad \mbox{Definition of optimal space} \\
+	\nonumber \mbox{Assume:} \quad & \langle \exists \rSolution \in O' : \reverse(\rSolution) \not\in O \rangle . \quad \mbox{Therefore,}\\
+	\nonumber & \langle \exists S \in F : C(S) < C(\reverse(\rSolution)) \rangle , \quad \mbox{from the definition of optimal space} \\
 	\nonumber \\
-	\nonumber \rSolution \in \rOptimal & \Rightarrow \forall \beta \in \rFeasible : \rCost(\rSolution) \leq \rCost(\beta) \quad (*)\\
+	\nonumber \mbox{Also } & \mbox{from the definition of $\rOptimal$ we have that:} \\
+	\nonumber \rSolution \in \rOptimal & \Rightarrow \langle \forall \beta \in \rFeasible : \rCost(\rSolution) \leq \rCost(\beta) \rangle . \quad (*)\\
 	\nonumber \\
 	\nonumber \mbox{from \ref{INVERSEFEASIBLE}}\quad & \inverse(\mSolution) \in \rFeasible \\
 	\nonumber \mbox{from \ref{INVERSECOST}}\quad & \rCost(\inverse(\mSolution)) \leq \mCost(S) \\
