--- a/hons/docs/tAlgos.tex
+++ b/hons/docs/tAlgos.tex
@@ -16,7 +16,7 @@ If the solution could take arbitrary (real) values, then this is a (possibly unb
 More formally, if $F$ is the $n$ dimensional polytope for real solutions, then $F \cap \mathbb{Z}^n$ are the feasible integral solutions.
 
 This observation allows us to reason about the relative costs of the integral and linear solutions.
-This difference is called the {\em integrality gap}, and is a well studied property of many NP-Hard problems, for example the integrality gap for the standard linear relaxation of Max-Cut is $2-\epsilon$ \cite{fer07}, where $\epsilon$ is some small ammount which depends on the number of constraints in the formulation.
+This difference is called the {\em integrality gap}, and is a well studied property of many NP-Hard problems, for example the integrality gap for the standard linear relaxation of Max-Cut is $2-\epsilon$ \cite{fer07}, where $\epsilon$ is some small amount which depends on the number of constraints in the formulation.
 When this gap is bounded, it provides a bound on the worst-case approximation so long as a relaxed linear programme is being used.
 
 The next step in approximating is to round the real-valued solution to integer values.
