--- a/hons/docs/tIntroduction.tex
+++ b/hons/docs/tIntroduction.tex
@@ -10,7 +10,7 @@ A brief introduction to the problem context is necessary first.
 Chapter \ref{chapBack} will provide a more thorough background.
 
 Concurrency and parallelism have become critical in modern applications.
-The use of multicore platforms, in addition the so-called {\em cloud} computers (networked heterogeneous clusters), are becoming more common, in particular for data management in large data centers, however, to access their full potential requires effort on the part of the programmer to parallelise code.
+The use of multicore platforms, in addition the so-called {\em cloud} computers (networked heterogeneous clusters), are becoming more common, in particular for data management in large data centres, however, to access their full potential requires effort on the part of the programmer to parallelise code.
 One method of achieving explicit parallelisation for certain kinds of computations is to decompose the program to an interconnected network of functions, called a {\em computational graph}.
 SDF graphs are a subset of computational graphs where the amount of data which moves between the computing nodes (called {\em actors}) is known statically.
 
